--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,17 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springfox.documentation.enabled=true
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=540000
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.connection-test-query=SELECT 1
-
+spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/test1
+spring.datasource.primary.username=root
+spring.datasource.primary.password=
+spring.datasource.primary.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.secondary.jdbc-url=jdbc:mysql://localhost:3306/test2
+spring.datasource.secondary.username=root
+spring.datasource.secondary.password=
+spring.datasource.secondary.driver-class-name=com.mysql.cj.jdbc.Driver
