--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,12 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springfox.documentation.enabled=true
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.primary.jdbc-url=jdbc:mysql://localhost:3306/test1
+spring.datasource.primary.username=root
+spring.datasource.primary.password=
+spring.datasource.primary.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.secondary.jdbc-url=jdbc:mysql://localhost:3306/test2
+spring.datasource.secondary.username=root
+spring.datasource.secondary.password=
+spring.datasource.secondary.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create-drop
