--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.datasource.hikari.idle-timeout=500000
 spring.datasource.hikari.max-lifetime=540000
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.connection-test-query=SELECT 1
+spring.flyway.baseline-on-migrate=true
 
