--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,23 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springfox.documentation.enabled=true
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=20
-spring.datasource.hikari.idle-timeout=500000
-spring.datasource.hikari.max-lifetime=540000
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.connection-test-query=SELECT 1
+spring.jta.enabled=true
+spring.jta.atomikos.datasource.primary.xa-properties.url=jdbc:mysql://localhost:3306/test1?serverTimezone=UTC
+spring.jta.atomikos.datasource.primary.xa-properties.user=root
+spring.jta.atomikos.datasource.primary.xa-properties.password=
+spring.jta.atomikos.datasource.primary.xa-data-source-class-name=com.mysql.cj.jdbc.MysqlXADataSource
+spring.jta.atomikos.datasource.primary.unique-resource-name=test1
+spring.jta.atomikos.datasource.primary.max-pool-size=25
+spring.jta.atomikos.datasource.primary.min-pool-size=3
+spring.jta.atomikos.datasource.primary.max-lifetime=20000
+spring.jta.atomikos.datasource.primary.borrow-connection-timeout=10000
+spring.jta.atomikos.datasource.secondary.xa-properties.url=jdbc:mysql://localhost:3306/test2?serverTimezone=UTC
+spring.jta.atomikos.datasource.secondary.xa-properties.user=root
+spring.jta.atomikos.datasource.secondary.xa-properties.password=
+spring.jta.atomikos.datasource.secondary.xa-data-source-class-name=com.mysql.cj.jdbc.MysqlXADataSource
+spring.jta.atomikos.datasource.secondary.unique-resource-name=test2
+spring.jta.atomikos.datasource.secondary.max-pool-size=25
+spring.jta.atomikos.datasource.secondary.min-pool-size=3
+spring.jta.atomikos.datasource.secondary.max-lifetime=20000
+spring.jta.atomikos.datasource.secondary.borrow-connection-timeout=10000
 
