--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springfox.documentation.enabled=true
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
+spring.datasource.url=jdbc:mysql://localhost:3306/sys?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
