--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 springfox.documentation.enabled=true
 #logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=trace
@@ -6,5 +5,17 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sys
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+#
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.password=
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.min-idle=0
+spring.redis.lettuce.shutdown-timeout=5000ms
