--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 #server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.ldap.embedded.ldif=classpath:ldap-server.ldif
+spring.ldap.embedded.base-dn=dc=blooddot,dc=com
