--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.influx.url=http://localhost:8086
+spring.influx.user=admin
+spring.influx.password=secret
