--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 #server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.thymeleaf.cache=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.content-type=text/html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.excluded-view-names=
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.template-resolver-order=1
