--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+file.upload.path=D:/
