--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-#server.port=8888
+server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+elasticjob.reg-center.server-lists=localhost:2181
+elasticjob.reg-center.namespace=example
+elasticjob.jobs.my-simple-job.elastic-job-class=com.example.demo.MySimpleJob
+elasticjob.jobs.my-simple-job.cron=0/5 * * * * ?
+elasticjob.jobs.my-simple-job.sharding-total-count=1
