--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8888
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 elasticjob.reg-center.server-lists=localhost:2181
-elasticjob.reg-center.namespace=example
+elasticjob.reg-center.namespace=${spring.application.name}
 elasticjob.jobs.my-sharding-job.elastic-job-class=com.example.demo.MySimpleJob
 elasticjob.jobs.my-sharding-job.cron=0/5 * * * * ?
 elasticjob.jobs.my-sharding-job.sharding-total-count=3
